<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadinapriotvaranju">

    <TextView
        android:id="@+id/chooseIngredientsText"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="81dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="66dp"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center"
        android:text="@string/chooseIngredients"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/meatGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:text="@string/meat"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fruitsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:text="@string/fruits"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/vegetablesGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:text="@string/vegetables"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="75dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="18sp"/>

    <FrameLayout
        android:id="@+id/frameForFragments"
        android:layout_width="wrap_content"
        android:layout_height="543dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="156dp">

    </FrameLayout>
</RelativeLayout>